<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00aee5"
    tools:context="pk.projektzespolowy.chatup.registration.activity.RegisterActivity">

    <EditText
        android:id="@+id/editText3"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="79dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/ic_action_user"
        android:drawableStart="@drawable/ic_action_user"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textSize="20sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_alignEnd="@+id/editText3"
        android:layout_alignRight="@+id/editText3"
        android:layout_below="@+id/editText3"
        android:layout_marginTop="39dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/ic_action_mail"
        android:drawableStart="@drawable/ic_action_mail"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        android:textStyle="italic"/>

    <EditText
        android:id="@+id/editText5"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/editText4"
        android:layout_alignStart="@+id/editText4"
        android:layout_below="@+id/editText4"
        android:layout_marginTop="36dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/ic_action_password"
        android:drawableStart="@drawable/ic_action_password"
        android:ems="10"
        android:hint="@string/password2"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_alignEnd="@+id/editText5"
        android:layout_alignRight="@+id/editText5"
        android:layout_below="@+id/editText5"
        android:layout_marginTop="33dp"
        android:drawableLeft="@drawable/ic_action_password"
        android:drawableStart="@drawable/ic_action_password"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:textStyle="italic"
        android:background="#ffffff"/>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText6"
        android:layout_alignStart="@+id/editText6"
        android:layout_below="@+id/editText6"
        android:layout_marginTop="47dp"
        android:text="@string/checkbox1"
        android:textSize="12sp"
        android:textStyle="italic"
        tools:text="Accept regulations" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBox"
        android:layout_alignStart="@+id/checkBox"
        android:layout_below="@+id/checkBox"
        android:text="@string/checkbox2"
        android:textSize="12sp"
        android:textStyle="italic"
        tools:text="I agree to receive messages from ChatUp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_alignLeft="@+id/checkBox2"
        android:layout_alignStart="@+id/checkBox2"
        android:layout_below="@+id/checkBox2"
        android:layout_marginTop="32dp"
        android:background="@color/colorAccent"
        android:text="@string/sign_in"
        android:textColor="@android:color/background_light"
        android:textSize="24sp" />
</RelativeLayout>