<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00aee5"
    tools:context="pk.projektzespolowy.chatup.login.activity.LoginActivity">

    <EditText
        android:id="@+id/textview_login"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_alignLeft="@+id/button_login"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/button_login"
        android:layout_marginTop="171dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/ic_action_user"
        android:drawableStart="@drawable/ic_action_user"
        android:ems="10"
        android:hint="@string/hint_login"
        android:inputType="textEmailAddress|textPersonName"
        android:textSize="20sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/textview_password"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_alignLeft="@+id/textview_login"
        android:layout_alignStart="@+id/textview_login"
        android:layout_below="@+id/textview_login"
        android:layout_marginTop="38dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/ic_action_password"
        android:drawableStart="@drawable/ic_action_password"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:textStyle="italic"
        android:imeOptions="actionDone"/>

    <TextView
        android:id="@+id/textView_forgotten_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="42dp"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        android:text="@string/forgot_account_or_password"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="italic"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textview_password"
        android:layout_alignRight="@+id/textview_password"
        android:layout_alignTop="@+id/textView_forgotten_password"
        android:text="@string/register_here"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView_forgotten_password"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="92dp"
        android:background="@color/colorAccent"
        android:text="Log in"
        android:textColor="@android:color/background_light"
        android:textSize="18sp" />

</RelativeLayout>